[gd_scene load_steps=12 format=3 uid="uid://kr1r4fso0jvg"]

[ext_resource type="Script" uid="uid://bkb1qdlksjdat" path="res://Scripts/UI/new_account.gd" id="1_j25qx"]
[ext_resource type="Texture2D" uid="uid://b85vwgmgm8bwx" path="res://Assets/Telas/Tela_sem_nada.jpg" id="1_t7q4i"]
[ext_resource type="Texture2D" uid="uid://bgmg64qvyuyj5" path="res://Assets/Logo.png" id="2_j25qx"]
[ext_resource type="Texture2D" uid="uid://bqaes3r3flsuf" path="res://Assets/icons/Icon.png" id="4_oluhd"]
[ext_resource type="FontFile" uid="uid://bry6apua5ag3h" path="res://Assets/Fonte/TooMuchInk.ttf" id="5_741bd"]
[ext_resource type="Texture2D" uid="uid://b1stdee72g4e2" path="res://Assets/BtFundos/Fundo do login.png" id="5_iwnpw"]
[ext_resource type="Texture2D" uid="uid://cbgts0dcl7p56" path="res://Assets/BtFundos/Butõespequeno.png" id="6_iwnpw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xdbki"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_oluhd")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="Animation" id="Animation_5dlq2"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-1157, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/KhaosCart:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(480, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/KhaosCart:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(268, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_lvhdr"]
resource_name = "Trasição1"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-1157, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/KhaosCart:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(244, -0.25, 0, 0.25, 0, 244, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/KhaosCart:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(136, -0.25, 0, 0.25, 0, 136, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pxb54"]
_data = {
&"RESET": SubResource("Animation_5dlq2"),
&"Trasição1": SubResource("Animation_lvhdr")
}

[node name="New_account" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j25qx")

[node name="TelaSemNada" type="Sprite2D" parent="."]
position = Vector2(576.75, 350)
scale = Vector2(1.61921, 1.42276)
texture = ExtResource("1_t7q4i")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(776, 188)
texture = ExtResource("2_j25qx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(393.174, 401.36)
scale = Vector2(4.84782, 4.08423)
sprite_frames = SubResource("SpriteFrames_xdbki")
autoplay = "default"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 692.0
pivot_offset = Vector2(789, 455)
color = Color(0, 0, 0, 0.631373)

[node name="FundoDoLogin" type="Sprite2D" parent="."]
position = Vector2(787, 427.25)
scale = Vector2(1, 1.19329)
texture = ExtResource("5_iwnpw")

[node name="Logo2" type="Sprite2D" parent="FundoDoLogin"]
position = Vector2(0, -124.237)
scale = Vector2(0.224398, 0.147099)
texture = ExtResource("2_j25qx")

[node name="StateLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 647.0
offset_top = 302.0
offset_right = 928.0
offset_bottom = 325.0
theme_override_fonts/font = ExtResource("5_741bd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = 7.0
offset_right = 352.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="UsernameEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_741bd")
placeholder_text = "Username"
max_length = 12

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_741bd")
placeholder_text = "Email"
max_length = 55

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_741bd")
theme_override_font_sizes/font_size = 15
placeholder_text = "Password"
max_length = 20
secret = true

[node name="SignupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_741bd")
text = "Sign up"

[node name="or" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_741bd")
text = "----------------------or----------------------"

[node name="Butõespequeno" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(455, 270)
texture = ExtResource("6_iwnpw")

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 1065.0
offset_top = 575.0
offset_right = 1142.0
offset_bottom = 627.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_741bd")
theme_override_font_sizes/font_size = 20
text = "Quit
"
flat = true

[node name="Butõespequeno" type="Sprite2D" parent="."]
position = Vector2(1103, 507)
texture = ExtResource("6_iwnpw")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 1065.0
offset_top = 483.0
offset_right = 1142.0
offset_bottom = 533.0
focus_mode = 0
theme_override_fonts/font = ExtResource("5_741bd")
text = "Back"
flat = true

[node name="Transição" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Transição"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1157.0
offset_right = -1157.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.164706, 0.164706, 1)
metadata/_edit_use_anchors_ = true

[node name="KhaosCart" type="TextureRect" parent="Transição/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -188.0
offset_right = 332.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j25qx")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transição"]
libraries = {
&"": SubResource("AnimationLibrary_pxb54")
}

[connection signal="pressed" from="VBoxContainer/SignupButton" to="." method="_on_signup_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
